--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <!-- Links do Cabeçalho-->
         <section class="container-limite-cabecalho">
 
-            <nav class="cabecalho-links">
-                <div>
-                    <a href="#">Gleidson</a>
-                </div>
+            <div class="cabecalho-link">
+                <a href="#">Gleidson</a>
+            </div>
 
+            <nav class="cabecalho-links">
                 <div>
                     <a href="#inicio">Início</a>
                 </div>
@@ -46,10 +46,14 @@
         <section class="container-limite section-sobre">
 
             <div class="container-apresentacao">
-                <p>Olá, eu sou</p>
-                <h1>Gleidson Lima.</h1>
-                <h2>Desenvolvedor Front-End</h2>
-                <p>Café forte, código afiado e visão de futuro.</p>
+                <div id="apresentacao">
+                    <p id="Ola">Olá, eu sou</p>
+                    <h1>Gleidson Lima.</h1>
+                    <h2>Desenvolvedor Front-End</h2>
+                    <span id="textinho">
+                        <p>Café forte, código afiado e visão de futuro.</p>
+                    </span>
+                </div>
 
                 <!-- links -->
                 <nav class="links-bio">
