--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="description" content="meu portfólio">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+
     <script src="https://kit.fontawesome.com/2599b7d2bb.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="css/style.css">
     <title>Meu portfólio</title>
 </head>
@@ -16,7 +26,7 @@
         <section class="container-limite-cabecalho">
 
             <div class="cabecalho-link">
-                <a href="#">Gleidson</a>
+                <i class="fa-sharp-duotone fa-solid fa-ghost"></i>       
             </div>
 
             <nav class="cabecalho-links">
@@ -49,7 +59,7 @@
                 <div id="apresentacao">
                     <p id="Ola">Olá, eu sou</p>
                     <h1>Gleidson Lima.</h1>
-                    <h2>Desenvolvedor Front-End</h2>
+                    <h2>Desenvolvedor Front-End.</h2>
                     <span id="textinho">
                         <p>Café forte, código afiado e visão de futuro.</p>
                     </span>
@@ -57,11 +67,11 @@
 
                 <!-- links -->
                 <nav class="links-bio">
-                    <div class="link-bio-github">
+                    <div class="link-bio link-bio-github">
                         <a href="#">Github</a>
                     </div>
 
-                    <div class="link-bio-linkedin">
+                    <div class="link-bio link-bio-linkedin">
                         <a href="#">LinkedIn</a> 
                     </div>
                 </nav>
