--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 
             <div class="secao-projetos">
 
-                <div class="card-projeto container-limite">
+                <div class="card-projeto">
 
                     <div class="img-card-projeto img-hospedagem">
                         <img src="img/hospedagem.png" alt="imagem-site-hospedagem">
