pequena alteração no português

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
         <section id="contato" class="container-limite section-contato">
             <h2>Entre em contato</h2>
-            <p>Estou em busca de uma oportunidade para contribuir <br>com projetos inovadores e crescer junto com a equipe. <br>Se procura alguém comprometido e pronto para desafios, <br>vamos conversar?</p>
+            <p>Estou em busca de uma oportunidade para contribuir <br>com projetos inovadores e crescer junto com a equipe. <br>Se procura alguém comprometido e pronto para desafios, <br>vamos conversar!</p>
 
             <div class="links-contato">
                 <div>
