adicionando os pingos no is

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
                     <div class="text-card-projeto">
                         <h2>Pousada Secreta</h2>
-                        <p>Pousada Secreta, site moderno e funcional, design elegante com foco na apresentação de quartos e serviços</p>
+                        <p>Pousada Secreta, site moderno e funcional, design elegante com foco na apresentação de quartos e serviços.</p>
 
                         <div class="links-projeto">
                             <div>
@@ -247,7 +247,7 @@
         <a id="seta-voltar" href="#voltar-inicio"><i class="fa-solid fa-arrow-up"></i></a>
 
         <p>Feito por <span id="italico">Gleidson Lima</span>.</p>
-        <p>&copy;2025 | <span>Gleidson Lima</span> | todos os direitos reservados</p>
+        <p>&copy;2025 | <span>Gleidson Lima</span> | todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
