--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
                     <div class="text-card-projeto">
                         <h2>AlfaTech</h2>
-                        <p>Soluções em Hospedagem, estruturado com elementos visuais atrantes e organizados para facilitar a navegação, interface simples e funcional, projetada para transmitir informações de maneira clara.</p>
+                        <p>Soluções em Hospedagem, estruturado com elementos visuais atraentes e organizados para facilitar a navegação, interface simples e funcional, projetada para transmitir informações de maneira clara.</p>
 
                         <div class="links-projeto">
                             <div>
